<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.digitalpebble.stormcrawler</groupId>
	<artifactId>storm-crawler</artifactId>
	<version>2.2-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>storm-crawler</name>
	<description>A collection of resources for building low-latency, scalable web crawlers on Apache Storm.</description>
	<url>http://stormcrawler.net/</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<organization>
		<name>DigitalPebble Ltd</name>
		<url>http://www.digitalpebble.com</url>
	</organization>

	<developers>
		<developer>
			<name>Julien Nioche</name>
			<email>julien@digitalpebble.com</email>
			<organization>DigitalPebble</organization>
			<organizationUrl>http://www.digitalpebble.com</organizationUrl>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Sebastian Nagel</name>
			<email>sebastian@commoncrawl.org</email>
			<organization>CommonCrawl</organization>
			<organizationUrl>http://commoncrawl.org</organizationUrl>
		</contributor>
		<contributor>
			<name>Jorge Luis Betancourt</name>
			<email>betancourt.jorge@gmail.com</email>
			<organization>trivago</organization>
			<organizationUrl>https://www.trivago.com</organizationUrl>
		</contributor>
	</contributors>

	<scm>
		<connection>scm:git:https://github.com/DigitalPebble/storm-crawler.git</connection>
		<developerConnection>scm:git:git@github.com:DigitalPebble/storm-crawler.git</developerConnection>
		<url>https://github.com/DigitalPebble/storm-crawler</url>
	  <tag>HEAD</tag>
  </scm>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/DigitalPebble/storm-crawler/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<additionalparam>-Xdoclint:none</additionalparam>
		<!-- dependency versions -->
		<junit.version>4.13.2</junit.version>
		<storm-client.version>2.3.0</storm-client.version>
		<jackson-databind.version>2.11.1</jackson-databind.version>
		<tika.version>2.1.0</tika.version>
		<mockito.version>3.7.7</mockito.version>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.2</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<useReleaseProfile>false</useReleaseProfile>
						<releaseProfiles>release</releaseProfiles>
						<goals>deploy</goals>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.cosium.code</groupId>
				<artifactId>git-code-format-maven-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<!-- On commit, format the modified java files -->
					<execution>
						<id>install-formatter-hook</id>
						<goals>
							<goal>install-hooks</goal>
						</goals>
					</execution>
					<!-- On Maven verify phase, fail if any file (including unmodified) 
						is badly formatted -->
					<execution>
						<id>validate-code-format</id>
						<goals>
							<goal>validate-code-format</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<googleJavaFormatOptions>
						<aosp>true</aosp>
						<fixImportsOnly>false</fixImportsOnly>
						<skipSortingImports>false</skipSortingImports>
						<skipRemovingUnusedImports>false</skipRemovingUnusedImports>
					</googleJavaFormatOptions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-source-plugin</artifactId>
							<version>2.2.1</version>
							<executions>
								<execution>
									<id>attach-sources</id>
									<goals>
										<goal>jar-no-fork</goal>
									</goals>
								</execution>
							</executions>
						</plugin>

						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jar-plugin</artifactId>
							<version>2.5</version>
							<executions>
								<execution>
									<id>attach-test</id>
									<goals>
										<goal>test-jar</goal>
									</goals>
								</execution>
							</executions>
						</plugin>

						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>2.9.1</version>
							<executions>
								<execution>
									<id>attach-javadocs</id>
									<goals>
										<goal>jar</goal>
									</goals>
								</execution>
							</executions>
						</plugin>

					</plugins>
				</pluginManagement>

				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.storm</groupId>
				<artifactId>storm-client</artifactId>
				<version>${storm-client.version}</version>
				<!-- keep storm out of the jar-with-dependencies -->
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-databind.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>core</module>
		<module>external</module>
		<module>external/aws</module>
		<module>external/elasticsearch</module>
		<module>external/langid</module>
		<module>external/solr</module>
		<module>external/sql</module>
		<module>external/tika</module>
		<module>external/urlfrontier</module>
		<module>external/warc</module>
		<module>archetype</module>
		<module>external/elasticsearch/archetype</module>
	</modules>
</project>
